# lu-aup-md

./: .gitmodules  README  uzdevumi.txt
a29/: README  a29.cpp  a29.py
b14/: README  b14.cpp  b14.out  b14.py  test_cpp.sh  test_py.sh
c37/: Makefile  README  c37.cpp
c37/include/: fort.h
c37/src/: c37.cpp
d20/: Makefile  README  TESTS.md  d20.txt
d20/src/: main.cpp  program.cpp  program.hpp
f21/: main.cpp  run.sh  test_1.cpp  test_2.cpp  test_3.cpp  tests.txt
g17/: CMakeLists.txt  README.md  implement-list.cpp  implement-list.h  implement-list.hpp  implemented.cpp  interact-implemented.cpp  interact-standart.cpp  run-interactive-impl.sh  run-interactive-stl.sh  run-unit-tests.sh  unit-testing.cpp  uzdevums.txt
gg/: CMakeLists.txt  README.md  uzdevums.txt
gg/scripts/: run-interactive.sh  run-unit-tests.sh
gg/src/: CMakeLists.txt  MyListSolution.cpp  MyListSolution.h  StlListSolution.hpp  interact.cpp  unit-testing.cpp
h6/: a.out  line_by_line.cpp  main.cpp  main_2.cpp  run.sh  test_1.in  test_1.out  uzdevums.txt
h6/tests/: test_1.in
komanda/: komanda.cpp  team.in  team.out
pasts/: pasts.cpp
